force-app/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Calendar_Shift_Color__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Shift_Color__c</fullName>
    <label>Calendar_Shift_Color</label>
    <length>15</length>
    <type>Text</type>
</CustomField>