force-app/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>