force-app/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Shift_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Date_Time__c</fullName>
    <formula>GW_Volunteers__Start_Date_Time__c + ( GW_Volunteers__Duration__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>